[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/froggie/froggie.gd" type="Script" id=1]
[ext_resource path="res://assets/froggie/froggieSprite0007.png" type="Texture" id=2]
[ext_resource path="res://assets/froggie/froggieSprite0012.png" type="Texture" id=3]
[ext_resource path="res://assets/froggie/froggieSprite0004.png" type="Texture" id=4]
[ext_resource path="res://assets/froggie/froggieSprite0006.png" type="Texture" id=5]
[ext_resource path="res://assets/froggie/froggieSprite0001.png" type="Texture" id=6]
[ext_resource path="res://assets/froggie/froggieSprite0003.png" type="Texture" id=7]
[ext_resource path="res://assets/froggie/froggieSprite0014.png" type="Texture" id=8]
[ext_resource path="res://assets/froggie/froggieSprite0010.png" type="Texture" id=9]
[ext_resource path="res://assets/froggie/froggieSprite0011.png" type="Texture" id=10]
[ext_resource path="res://assets/froggie/froggieSprite0008.png" type="Texture" id=11]
[ext_resource path="res://assets/froggie/froggieSprite0009.png" type="Texture" id=12]
[ext_resource path="res://assets/froggie/froggieSprite0005.png" type="Texture" id=13]
[ext_resource path="res://assets/froggie/froggieSprite0002.png" type="Texture" id=14]
[ext_resource path="res://assets/froggie/froggieSprite0013.png" type="Texture" id=15]
[ext_resource path="res://assets/froggie/dust_particle.png" type="Texture" id=16]
[ext_resource path="res://assets/audio/mud02.ogg" type="AudioStream" id=17]

[sub_resource type="GDScript" id=24]
script/source = "extends Node2D

export(NodePath) var camera

onready var cam = $\"froggie/cam\"

func _ready():
	cam.set_remote_node(get_node(camera).get_path())
	yield(get_tree(), \"idle_frame\")
	get_node(camera).set_enable_follow_smoothing(true)
"

[sub_resource type="Curve" id=31]
_data = [ Vector2( 0, 0.235227 ), 0.0, 0.488648, 0, 0, Vector2( 1, 0.6625 ), -0.106294, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=32]
offsets = PoolRealArray( 0.757202, 0.897119, 1 )
colors = PoolColorArray( 1, 1, 1, 0.8, 1, 1, 1, 0, 1, 1, 1, 0 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "air",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 14 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "dance",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 15 ), ExtResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 19.0

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( 4, 11, -4, 11, -9, 14, -9, 19, -4, 21, 5, 21, 8, 18, 7, 14 )

[sub_resource type="GDScript" id=9]
script/source = "extends Area2D

onready var froggie = get_parent()

func _on_swing_zone_body_entered(body):
	if not froggie.swinging:
		if body.is_in_group(\"ANCHOR\"): 
			froggie.anchors.push_back(body)
			#body.get_node(\"ColorRect\").color = Color(1,0,0,1)
	else:
		if body.is_in_group(\"ANCHOR\"): 
			froggie.second_anchor = body
			froggie.anchors.push_back(body)
			#body.get_node(\"ColorRect\").color = Color(0,0,1,1)


func _on_swing_zone_body_exited(body):
	if body in froggie.anchors:
		froggie.anchors.remove(froggie.anchors.find(body))
		body.get_node(\"ColorRect\").color = Color(\"0070ff\")
"

[sub_resource type="CircleShape2D" id=30]
radius = 450.0

[sub_resource type="Gradient" id=28]
offsets = PoolRealArray( 0.421277, 0.52766, 0.629787 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.734694, 0.886275, 0.886275, 0.886275, 0 )

[sub_resource type="GradientTexture2D" id=29]
gradient = SubResource( 28 )
fill = 1
fill_from = Vector2( 0.516667, 0.548958 )

[sub_resource type="Curve" id=2]
min_value = 0.25
max_value = 5.0
_data = [ Vector2( 0, 0.25 ), 0.0, 6.3, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=25]
offsets = PoolRealArray( 0.323129, 0.77551 )
colors = PoolColorArray( 1, 0.55, 0.55, 1, 1, 0.49, 0.49, 1 )

[node name="player" type="Node2D"]
script = SubResource( 24 )

[node name="dust" type="CPUParticles2D" parent="."]
position = Vector2( 0, 20.684 )
emitting = false
amount = 64
lifetime = 2.0
speed_scale = 0.75
lifetime_randomness = 0.06
local_coords = false
texture = ExtResource( 16 )
emission_shape = 1
emission_sphere_radius = 3.72
gravity = Vector2( 0, -8 )
initial_velocity = 10.0
initial_velocity_random = 0.5
angular_velocity = 50.0
angular_velocity_random = 0.3
angle = 520.9
angle_random = 0.47
scale_amount = 0.38
scale_amount_curve = SubResource( 31 )
color = Color( 0.847059, 0.686275, 0.560784, 1 )
color_ramp = SubResource( 32 )

[node name="froggie" type="RigidBody2D" parent="." groups=["OBJECT", "PLAYER"]]
collision_mask = 34
mode = 2
gravity_scale = 5.0
custom_integrator = true
continuous_cd = 2
contacts_reported = 4
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="froggie"]
position = Vector2( -0.320999, 1 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "air"
speed_scale = 2.0
playing = true
offset = Vector2( -4.98, 0.321 )

[node name="collider" type="CollisionShape2D" parent="froggie"]
shape = SubResource( 4 )

[node name="tongue_start" type="Node2D" parent="froggie"]
position = Vector2( 2, -12 )

[node name="tongue_ray2" type="RemoteTransform2D" parent="froggie/tongue_start"]
remote_path = NodePath("../../../tongue_ray")
update_rotation = false

[node name="swing_timer" type="Timer" parent="froggie"]
one_shot = true

[node name="swing_cooldown" type="Timer" parent="froggie"]
wait_time = 0.5
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="froggie"]
position = Vector2( 0, -16 )
occluder = SubResource( 5 )

[node name="jump_timer" type="Timer" parent="froggie"]
wait_time = 0.2
one_shot = true

[node name="cam" type="RemoteTransform2D" parent="froggie"]
update_rotation = false
update_scale = false

[node name="groundray" type="RemoteTransform2D" parent="froggie"]
remote_path = NodePath("../../groundray")
update_rotation = false

[node name="ceilingray" type="RemoteTransform2D" parent="froggie"]
remote_path = NodePath("../../ceilingray")
update_rotation = false

[node name="holdray" type="RemoteTransform2D" parent="froggie"]
remote_path = NodePath("../../holdray")
update_rotation = false
update_scale = false

[node name="swing_zone" type="Area2D" parent="froggie"]
collision_layer = 8
collision_mask = 4
script = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="swing_col" type="CollisionShape2D" parent="froggie/swing_zone"]
shape = SubResource( 30 )
__meta__ = {
"_edit_lock_": true
}

[node name="death_timer" type="Timer" parent="froggie"]
one_shot = true

[node name="blood" type="CPUParticles2D" parent="froggie"]
position = Vector2( 0, 9.01 )
emitting = false
amount = 32
lifetime = 0.01
preprocess = 0.6
speed_scale = 0.01
explosiveness = 0.22
randomness = 0.36
lifetime_randomness = 0.04
texture = SubResource( 29 )
emission_shape = 1
emission_sphere_radius = 11.78
direction = Vector2( 1, 1 )
spread = 180.0
initial_velocity = 100.0
initial_velocity_random = 1.0
angular_velocity_random = 1.0
damping = 26.94
damping_random = 0.15
scale_amount = 0.11
scale_amount_random = 0.13

[node name="hold" type="RemoteTransform2D" parent="froggie"]
position = Vector2( 0, -45 )
update_rotation = false

[node name="footstep" type="AudioStreamPlayer" parent="froggie"]
stream = ExtResource( 17 )
volume_db = -15.0
pitch_scale = 0.95
bus = "SFX"

[node name="tongue_ray" type="RayCast2D" parent="."]
position = Vector2( 2, -12 )
enabled = true
collision_mask = 66

[node name="groundray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 26.975 )
collision_mask = 34

[node name="dust" type="RemoteTransform2D" parent="groundray"]
position = Vector2( 0, 20.684 )
remote_path = NodePath("../../dust")
update_rotation = false

[node name="ceilingray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -35 )
collision_mask = 2

[node name="holdray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 35, 0 )
collision_mask = 32

[node name="tongue" type="Line2D" parent="."]
visible = false
light_mask = 0
points = PoolVector2Array( 0, 0, 0, 50 )
width_curve = SubResource( 2 )
default_color = Color( 1, 0.615686, 0.615686, 1 )
gradient = SubResource( 25 )
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true
__meta__ = {
"_edit_lock_": true
}

[connection signal="body_entered" from="froggie" to="froggie" method="_on_froggie_body_entered"]
[connection signal="timeout" from="froggie/jump_timer" to="froggie" method="_on_jump_timer_timeout"]
[connection signal="body_entered" from="froggie/swing_zone" to="froggie/swing_zone" method="_on_swing_zone_body_entered"]
[connection signal="body_exited" from="froggie/swing_zone" to="froggie/swing_zone" method="_on_swing_zone_body_exited"]
[connection signal="timeout" from="froggie/death_timer" to="froggie" method="_on_death_timer_timeout"]
